// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorCard snapshot with retry button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 40,
        "marginBottom": 16,
      }
    }
  >
    ⚠️
  </Text>
  <Text
    style={
      {
        "color": "#F5F5F7",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Oops
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#821A52",
        "borderRadius": 12,
        "marginBottom": 16,
        "opacity": 1,
        "paddingHorizontal": 32,
        "paddingVertical": 14,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Retry
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#8E8E93",
        "fontSize": 13,
        "textAlign": "center",
      }
    }
  >
    If this keeps happening, please contact the society office.
  </Text>
</View>
`;

exports[`ErrorCard snapshot without retry button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 40,
        "marginBottom": 16,
      }
    }
  >
    ⚠️
  </Text>
  <Text
    style={
      {
        "color": "#F5F5F7",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Oops
  </Text>
  <Text
    style={
      {
        "color": "#8E8E93",
        "fontSize": 13,
        "textAlign": "center",
      }
    }
  >
    If this keeps happening, please contact the society office.
  </Text>
</View>
`;
